ajusters enums